fix: TeamStarting content align fix

--- a/src/components/Team/TeamStarting.scss
+++ b/src/components/Team/TeamStarting.scss
@@ -1,6 +1,6 @@
 .team-starting-wrapper {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
 	padding: 1.3rem;
 	width: 100%;
@@ -11,8 +11,6 @@
 
 .team-starting-title {
 	display: flex;
-	margin-right: 2rem;
-
 	font-family: "NEXONFootballGothic";
 	line-height: 1.25;
 	font-size: 2.5rem;
